<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg_green"
    tools:context=".MainActivity">
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/green"
            app:fabCradleRoundedCornerRadius="80dp"
            app:fabCradleVerticalOffset="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.19"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/anasayfa_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/home" />

                    <TextView
                        android:id="@+id/anasayfa_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/anasayfa"
                        android:textAlignment="center"
                        android:textColor="@color/backg_green"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.19"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/siparislerim_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/check_box" />

                    <TextView
                        android:id="@+id/siparislerim_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/siparislerim"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.19"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    tools:visibility="invisible">


                    <ImageView
                        android:id="@+id/sepetim_icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:src="@drawable/home" />

                    <TextView
                        android:id="@+id/sepetim_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sepetim"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.19"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ayarlar_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/settings" />

                    <TextView
                        android:id="@+id/ayarlar_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ayarlar"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.19"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/hesabim_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="4dp"
                        android:src="@drawable/baseline_person_pin_24" />

                    <TextView
                        android:id="@+id/hesabim_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hesabim"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>


            <ImageView
                android:id="@+id/circlewhite"
                android:layout_width="90dp"
                android:layout_height="88dp"
                android:src="@drawable/circlewhite"
                app:layout_anchor="@+id/sepetim_button"
                app:layout_anchorGravity="center">

            </ImageView>

            <ImageButton
                android:id="@+id/sepetim_button"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="72dp"
                android:layout_height="70dp"
                android:background="@drawable/circlewhite"
                android:backgroundTint="@color/lightgreen"
                android:elevation="10dp"
                android:padding="15dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_shopping_cart_24"
                app:layout_anchor="@+id/appbar"
                app:layout_anchorGravity="top|center" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/top_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">


                <TextView
                    android:id="@+id/kullanici"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dilanur Gider\nDiloş Döner"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.46"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/circle_light_green"
                    android:layout_width="99dp"
                    android:layout_height="99dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/circle_light_green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.517" />

                <ImageView
                    android:id="@+id/kullanici_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/baseline_person_24"
                    app:layout_constraintBottom_toBottomOf="@id/circle_light_green"
                    app:layout_constraintEnd_toEndOf="@id/circle_light_green"
                    app:layout_constraintStart_toStartOf="@id/circle_light_green"
                    app:layout_constraintTop_toTopOf="@id/circle_light_green"
                    app:layout_constraintVertical_bias="0.517" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="423dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/meyve_icon"
                            android:layout_width="200dp"
                            android:layout_height="130dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginBottom="50dp"
                            android:background="@drawable/menu_item_backg"
                            android:elevation="20dp"
                            android:src="@drawable/meyveler"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/meyve_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="@string/meyve"
                            android:textColor="@color/darkgreen"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/meyve_icon"
                            app:layout_constraintVertical_bias="0.933" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/sebze_icon"
                            android:layout_width="200dp"
                            android:layout_height="130dp"
                            android:background="@drawable/menu_item_backg"
                            android:padding="10dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginBottom="50dp"
                            android:elevation="20dp"
                            android:src="@drawable/vegetables"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:text="@string/sebze"
                            android:textColor="@color/darkgreen"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/sebze_icon"
                            app:layout_constraintVertical_bias="0.933" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>